test/frontend/fail/trailing_comma.osl
void f(int x) {}
shader foo() {
    f(1,);
}
